feat: Default values of packing slip displaying

--- a/index.html
+++ b/index.html
@@ -49,5 +49,7 @@
       <div ng-show="app.selectedBranch.selected" id="loadedOrders">
       </div>
     </div>
+    <div id="packingSlip">
+    </div>
   </body>
 </html>
