--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="no-print">
       <nav>
         <ul>
+          <input type="text" ng-model="app.searchBox" ng-keyup="app.search()" placeholder="Item search">
           <li ng-repeat="customerList in app.customers">
             <span ng-click="app.showList(customerList)" class="btn">{{customerList.name}}</span>
             <ul class="shopList" ng-show="customerList.show">
@@ -36,7 +37,7 @@
         <form id="orderForm" ng-submit="app.printPreview(app)">
           <h2>Customer:</h2>
           <h3>{{app.selectedBranch.name}}</h3>
-          <span ng-repeat="item in app.items" class="row item">
+          <span ng-repeat="item in app.displayedItems" class="row item">
             <strong class="col-12">{{item.description}}:</strong>
             <input ng-model="item.ordered" type="number" value="0" step="0.01" min="0" class="col-7">
             <label class="col-4">{{item.orderAs}}</label>
