--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h3>{{app.selectedBranch.name}}</h3>
           <span ng-repeat="item in app.displayedItems" class="row item">
             <strong class="col-12">{{item.description}}:</strong>
-            <input ng-model="item.ordered" type="number" value="0" step="0.01" min="0" class="col-7">
+            <input ng-model="item.ordered" type="number" value="0" step="0.01" min="0" class="col-7" onclick="this.select()">
             <label class="col-4">{{item.orderAs}}</label>
             <br>
           </span>
