--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
         </ul>
       </nav>
       <div>
+        Backorder: <input ng-model="app.backOrder" type="checkbox">
+        Order number: <input ng-model="app.orderNo" onclick="this.select()">
+      </div>
+      <div>
         <form id="orderForm" ng-submit="app.printPreview(app)">
           <h2>Customer:</h2>
           <h3>{{app.selectedBranch.name}}</h3>
-          Backorder: <input ng-model="app.backOrder" type="checkbox">
           <span ng-repeat="item in app.displayedItems" class="row item">
             <strong class="col-12">{{item.description}}:</strong>
             <input ng-model="item.ordered" type="number" value="0" step="0.01" min="0" class="col-7" onclick="this.select()">
