--- a/index.html
+++ b/index.html
@@ -41,21 +41,23 @@
         <input type="text" ng-model="app.searchBox" ng-keyup="app.search()" placeholder="Item search">
       </div>
       <div>
+        <h2>Customer:</h2>
+        <h3>{{app.selectedBranch.name}}</h3>
         <form id="orderForm" ng-submit="app.printPreview(app)">
-          <h2>Customer:</h2>
-          <h3>{{app.selectedBranch.name}}</h3>
           <span ng-repeat="item in app.displayedItems" class="row item">
             <strong class="col-12">{{item.description}}:</strong>
-            <input ng-model="item.ordered" type="number" value="0" step="0.01" min="0" class="col-7" onclick="this.select()">
+            <input ng-change="app.checkoutList()" ng-model="item.ordered" type="number" value="0" step="0.01" min="0" class="col-7" onclick="this.select()">
             <label class="col-4">
               {{item.orderAs}}
-              <button type="button" ng-click="item.ordered = item.ordered+1">+</button>
-              <button type="button" ng-click="item.ordered = item.ordered-1">-</button>
+              <button type="button" ng-click="item.ordered = item.ordered+1; app.checkoutList()">+</button>
+              <button type="button" ng-click="item.ordered = item.ordered-1; app.checkoutList()">-</button>
             </label>
             <br>
           </span>
           <input class="saveOrderBtn btn" type="submit" value="Print"/>
         </form>
+        <div class="checkout">
+        </div>
       </div>
     </div>
     <div id="packingSlip">
