--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <br>
         <input type="text" ng-model="app.searchBox" ng-keyup="app.search()" placeholder="Item search">
       </div>
-      <div>
-        <h2>Customer:</h2>
-        <h3>{{app.selectedBranch.name}}</h3>
-        <form id="orderForm" ng-submit="app.printPreview(app)">
+      <h2>Customer:</h2>
+      <h3>{{app.selectedBranch.name}}</h3>
+      <div class="row">
+        <form id="orderForm" class="col-8" ng-submit="app.printPreview(app)">
           <span ng-repeat="item in app.displayedItems" class="row item">
             <strong class="col-12">{{item.description}}:</strong>
             <input ng-change="app.checkoutList()" ng-model="item.ordered" type="number" value="0" step="0.01" min="0" class="col-7" onclick="this.select()">
@@ -56,7 +56,11 @@
           </span>
           <input class="saveOrderBtn btn" type="submit" value="Print"/>
         </form>
-        <div class="checkout">
+        <div class="checkout col-4">
+          <h2>Items</h2>
+          <div ng-repeat="item in app.checkoutItems">
+            <p>{{item.description}}: {{item.ordered}} {{item.orderAs}} ordered
+          </div>
         </div>
       </div>
     </div>
