--- a/index.html
+++ b/index.html
@@ -42,8 +42,17 @@
       </div>
       <h2>Customer:</h2>
       <h3>{{app.selectedBranch.name}}</h3>
-      <div class="row">
-        <form id="orderForm" class="col-8" ng-submit="app.printPreview(app)">
+      <div class="checkout">
+        <h2>Items</h2>
+        <div ng-repeat="item in app.checkoutItems">
+          <p>
+            <strong>{{item.description}}:</strong><br>
+            {{item.ordered}} {{item.orderAs}}
+          </p>
+        </div>
+      </div>
+      <div>
+        <form id="orderForm" ng-submit="app.printPreview(app)">
           <span ng-repeat="item in app.displayedItems" class="row item">
             <strong class="col-12">{{item.description}}:</strong>
             <input ng-change="app.checkoutList()" ng-model="item.ordered" type="number" value="0" step="0.01" min="0" class="col-7" onclick="this.select()">
@@ -56,12 +65,6 @@
           </span>
           <input class="saveOrderBtn btn" type="submit" value="Print"/>
         </form>
-        <div class="checkout col-4">
-          <h2>Items</h2>
-          <div ng-repeat="item in app.checkoutItems">
-            <p>{{item.description}}: {{item.ordered}} {{item.orderAs}} ordered
-          </div>
-        </div>
       </div>
     </div>
     <div id="packingSlip">
