feat: Quality of life added + items

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
           </span>
           <input class="saveOrderBtn btn" type="submit" value="Print"/>
         </form>
+        <button class="btn backToTop" onclick="$('html, body').animate({ scrollTop: 0 }, 'fast')">Back to top</button></a>
+        <br>
       </div>
     </div>
     <div id="packingSlip">
