chore: More items added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </span>
           <input class="saveOrderBtn btn" type="submit" value="Print"/>
         </form>
-        <button class="btn backToTop" onclick="$('html, body').animate({ scrollTop: 0 }, 'fast')">Back to top</button></a>
+        <button class="btn backToTop" onclick="$('html, body').animate({ scrollTop: 0 }, 'fast')">Back to top</button>
         <br>
       </div>
     </div>
