--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
           </p>
         </div>
       </div>
-      <div>
+      <div class="itemList">
         <form id="orderForm" ng-submit="app.printPreview(app)">
           <span ng-repeat="item in app.displayedItems" class="row item">
             <strong class="col-12">{{item.description}}:</strong>
             <input ng-change="app.checkoutList()" ng-model="item.ordered" type="number" value="0" step="0.01" min="0" class="col-7" onclick="this.select()">
-            <label class="col-4">
+            <span class="col-4">
               {{item.orderAs}}
               <button type="button" ng-click="item.ordered = item.ordered+1; app.checkoutList()">+</button>
               <button type="button" ng-click="item.ordered = item.ordered-1; app.checkoutList()">-</button>
-            </label>
+            </span>
             <br>
           </span>
           <input class="saveOrderBtn btn" type="submit" value="Print"/>
