--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body ng-controller="appCtrl as app" class="container">
     <div id="loading"></div>
 
-    <h1 class="no-print title col-12"><img class="no-print logo"src="images/logo.png"> Packing Slip Generator</h1>
+    <h1 class="no-print title col-12"><img class="no-print logo" src="images/logo.png"> Packing Slip Generator</h1>
 
     <div class="no-print">
       <nav>
@@ -55,7 +55,7 @@
         <form id="orderForm" ng-submit="app.printPreview(app)">
           <span ng-repeat="item in app.displayedItems" class="row item">
             <strong class="col-12">{{item.description}}:</strong>
-            <input ng-change="app.checkoutList()" ng-model="item.ordered" type="number" value="0" min="0" class="col-7" onclick="this.select()">
+            <input ng-change="app.checkoutList()" ng-model="item.ordered" type="number" value="0" min="0" class="col-7" onclick="this.select()" onscroll="this.blur()">
             <span class="col-4">
               {{item.orderAs}}
               <button type="button" ng-click="item.ordered = item.ordered+1; app.checkoutList()">+</button>
