--- a/index.html
+++ b/index.html
@@ -18,30 +18,52 @@
   </head>
   <body ng-controller="appCtrl as app" class="container">
     <div id="loading"></div>
-
-    <h1 id="title" class="no-print col-12"><img class="no-print logo" src="images/logo.png"> Packing Slip Generator</h1>
-
     <div class="no-print">
+      <div class="white"></div>
+      <h1 id="title" class="col-12"><img class="no-print logo" src="images/logo.png"> Packing Slip Generator</h1>
+
       <div id="customerDetails" class="center">
         Backorder: <input ng-model="app.backOrder" type="checkbox">
         <strong>| </strong><input ng-model="app.orderNo" onclick="this.select()" placeholder="Order no.">
-        | Date: <input id="datePicker" type="date" onclick="this.select()" ng-model="app.date">
-        | <input type="text" ng-model="app.searchBox" ng-keyup="app.search()" placeholder="Item search">
+        <strong>| </strong> Date: <input id="datePicker" type="date" onclick="this.select()" ng-model="app.date">
+        <strong>| </strong> <input type="text" ng-model="app.searchBox" ng-keyup="app.search()" placeholder="Item search">
+        <br>
+        <h2>Customer: {{app.selectedBranch.name}}</h2>
       </div>
-      <nav>
-        <ul class="center">
-          <li ng-repeat="customerList in app.customers">
-            <span ng-click="app.showList(customerList)" class="clean-gray-btn customerList">{{customerList.name}}</span>
-          </li>
-          <li ng-repeat="customerList in app.customers">
-            <ul class="shopList" ng-show="customerList.show">
-              <li ng-repeat="branch in customerList.array" ng-click="app.listClick(branch)" class="clean-gray-btn-shop">{{branch.name}}</li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-      <h2>Customer:</h2>
-      <h3>{{app.selectedBranch.name}}</h3>
+
+      <div id="mainBody">
+        <nav>
+          <ul class="center">
+            <li ng-repeat="customerList in app.customers">
+              <span ng-click="app.showList(customerList)" class="clean-gray-btn customerList">{{customerList.name}}</span>
+            </li>
+            <li ng-repeat="customerList in app.customers">
+              <ul class="shopList" ng-show="customerList.show">
+                <li ng-repeat="branch in customerList.array" ng-click="app.listClick(branch)" class="clean-gray-btn clean-gray-btn-shop">{{branch.name}}</li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="itemList">
+          <form id="orderForm" ng-submit="app.printPreview(app)">
+            <span ng-repeat="item in app.displayedItems" class="row item">
+              <strong class="col-12">{{item.description}}:</strong>
+              <input ng-change="app.checkoutList()" ng-model="item.ordered" type="number" value="0" min="0" class="col-7" onclick="this.select()">
+              <span class="col-4">
+                {{item.orderAs}}
+                <button type="button" ng-click="item.ordered = item.ordered+1; app.checkoutList()">+</button>
+                <button type="button" ng-click="item.ordered = item.ordered-1; app.checkoutList()">-</button>
+              </span>
+              <br>
+            </span>
+            <input class="saveOrderBtn clean-gray-btn" type="submit" value="Print"/>
+          </form>
+          <button class="backToTop clean-gray-btn" onclick="$('html, body').animate({ scrollTop: 0 }, 'fast')">Back to top</button>
+          <br>
+        </div>
+      </div>
+
       <div id="checkout">
         <h2 id="checkoutHeader">Items</h2>
         <div id="checkoutItems">
@@ -50,23 +72,6 @@
             {{item.ordered}} {{item.orderAs}}
           </p>
         </div>
-      </div>
-      <div class="itemList">
-        <form id="orderForm" ng-submit="app.printPreview(app)">
-          <span ng-repeat="item in app.displayedItems" class="row item">
-            <strong class="col-12">{{item.description}}:</strong>
-            <input ng-change="app.checkoutList()" ng-model="item.ordered" type="number" value="0" min="0" class="col-7" onclick="this.select()">
-            <span class="col-4">
-              {{item.orderAs}}
-              <button type="button" ng-click="item.ordered = item.ordered+1; app.checkoutList()">+</button>
-              <button type="button" ng-click="item.ordered = item.ordered-1; app.checkoutList()">-</button>
-            </span>
-            <br>
-          </span>
-          <input class="saveOrderBtn clean-gray-btn" type="submit" value="Print"/>
-        </form>
-        <button class="backToTop clean-gray-btn" onclick="$('html, body').animate({ scrollTop: 0 }, 'fast')">Back to top</button>
-        <br>
       </div>
     </div>
     <div id="packingSlip">
