fix: Print button can be clicked again

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </span>
               <br>
             </span>
-            <input class="saveOrderBtn clean-gray-btn" type="submit" value="Print"/>
+            <input class="printBtn clean-gray-btn" type="submit" value="Print"/>
           </form>
           <button class="backToTop clean-gray-btn" onclick="$('html, body').animate({ scrollTop: 0 }, 'fast')">Back to top</button>
           <br>
