fix: User can now logout when using mobile display

--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
     <!-- If the user has logged in they can use the functions -->
     <div ng-show="app.access">
       <div class="no-print">
-        <span class="greeting">
-          <p>Welcome back, {{app.name}}!</p>
-          <button class="clean-gray-btn" ng-click="app.logout()">Logout</button>
-        </span>
         <div class="white"></div>
         <h1 id="title" class="col-12"><img class="no-print logo" src="images/logo.png"> Packing Slip Generator</h1>
+        <div class="greeting">
+          <p>Welcome back, {{app.name}}! <br class="greetingBreakline"><button class="clean-gray-btn" ng-click="app.logout()">Logout</button></p>
+        </div>
 
         <div id="customerDetails" class="center">
           Backorder: <input ng-model="app.backOrder" type="checkbox">
