--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         <div class="white"></div>
         <h1 id="title" class="col-12"><img class="no-print logo" src="images/logo.png"> Packing Slip Generator</h1>
         <div class="greeting">
-          <p>Welcome back, {{app.name}}! <br class="greetingBreakline"><button class="clean-gray-btn" ng-click="app.logout()">Logout</button><span ng-show="!app.selectedBranch.name==''"><button class="clean-gray-btn" ng-click="app.loadData()">Load last order</button></p>
+          <p>
+            Welcome back, {{app.name}}! <br class="greetingBreakline"><button class="clean-gray-btn" ng-click="app.logout()">Logout</button><span ng-show="!app.selectedBranch.name==''"><button class="clean-gray-btn" ng-click="app.loadData()">Load last order</button></span>
+            <br>
+            Current view: <button class="clean-gray-btn" ng-click="app.invoice = !app.invoice"><span ng-show="!app.invoice">Packing Slip</span><span ng-show="app.invoice">Invoice</span></button>
+          </p>
         </div>
         <textarea class="notes" ng-model="app.notes" placeholder="Notes"></textarea>
 
@@ -91,12 +95,14 @@
             <hr>
           </div>
           <div id="checkoutItems">
-            <p ng-repeat="item in app.checkoutItems">
+            <p ng-repeat="item in app.checkoutItems" ng-show="!app.invoice">
               <strong>{{item.description}}:</strong><br>
               {{item.ordered}} {{item.orderAs}}
               <button type="button" class="clean-gray-btn checkoutButtons" ng-click="item.ordered = 0; app.checkoutList()">X</button>
               <button type="button" class="clean-gray-btn checkoutButtons" ng-click="item.ordered = item.ordered-1; app.checkoutList()">-</button>
               <button type="button" class="clean-gray-btn checkoutButtons" ng-click="item.ordered = item.ordered+1; app.checkoutList()">+</button>
+            </p>
+            <p ng-repeat="item in app.checkoutItems" ng-show="!app.invoice">
             </p>
           </div>
         </div>
