--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
         </div>
 
         <div id="invoiceCheckout" ng-show="app.invoice">
+          <h2>Items</h2>
+          <p ng-repeat="item in app.checkoutItems">
+            <strong class="invoiceDesc">{{item.description}}:</strong>
+            {{item.ordered}} {{item.orderAs}}
+            <button type="button" class="clean-gray-btn invoiceCheckoutButtons" ng-click="item.ordered = 0; app.checkoutList()">X</button>
+            <button type="button" class="clean-gray-btn invoiceCheckoutButtons" ng-click="item.ordered = item.ordered-1; app.checkoutList()">-</button>
+            <button type="button" class="clean-gray-btn invoiceCheckoutButtons" ng-click="item.ordered = item.ordered+1; app.checkoutList()">+</button>
+          </p>
         </div>
       </div>
 
