--- a/index.html
+++ b/index.html
@@ -109,24 +109,41 @@
         </div>
 
         <div id="invoiceCheckout" ng-show="app.invoice">
-          <table id="invoiceTable">
+          <div id="invoiceInnerItems">
+            <table id="invoiceTable">
+              <tr>
+                <th>Description</th>
+                <th>Quantity</th>
+                <th class="invoiceCheckoutButtonsTable"></th>
+                <th>Price</th>
+                <th>Total</th>
+              </tr>
+              <tr ng-repeat="item in app.checkoutItems">
+                <td>{{item.description}}</td>
+                <td>{{item.ordered}} {{item.orderAs}}</td>
+                <td>
+                  <button type="button" class="clean-gray-btn invoiceCheckoutButtons" ng-click="item.ordered = 0; app.checkoutList()">X</button>
+                  <button type="button" class="clean-gray-btn invoiceCheckoutButtons" ng-click="item.ordered = item.ordered-1; app.checkoutList()">-</button>
+                  <button type="button" class="clean-gray-btn invoiceCheckoutButtons" ng-click="item.ordered = item.ordered+1; app.checkoutList()">+</button>
+                </td>
+                <td>$100</td>
+                <td>$10000</td>
+              </tr>
+            </table>
+          </div>
+
+          <table id="invoiceTotalTable">
             <tr>
-              <th class="invoiceDesc">Description</th>
-              <th>Quantity</th>
-              <th class="invoiceCheckoutButtonsTable"></th>
-              <th>Price</th>
-              <th>Total</th>
+              <th>Sub total</th>
+              <td>$10000</td>
             </tr>
-            <tr ng-repeat="item in app.checkoutItems">
-              <td>{{item.description}}</td>
-              <td>{{item.ordered}} {{item.orderAs}}</td>
-              <td>
-                <button type="button" class="clean-gray-btn invoiceCheckoutButtons" ng-click="item.ordered = 0; app.checkoutList()">X</button>
-                <button type="button" class="clean-gray-btn invoiceCheckoutButtons" ng-click="item.ordered = item.ordered-1; app.checkoutList()">-</button>
-                <button type="button" class="clean-gray-btn invoiceCheckoutButtons" ng-click="item.ordered = item.ordered+1; app.checkoutList()">+</button>
-              </td>
-              <td></td>
-              <td></td>
+            <tr>
+              <th>GST</th>
+              <td>$100</td>
+            </tr>
+            <tr>
+              <th>Total</th>
+              <td>$10100</td>
             </tr>
           </table>
         </div>
