--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   <button type="button" class="clean-gray-btn invoiceCheckoutButtons" ng-click="item.ordered = item.ordered+1; app.checkoutList()">+</button>
                 </td>
                 <td><label>$</label><input class="invoicePriceInput" ng-model="item.tempPrice" min="0" step="0.01" onclick="this.select()"></td>
-                <td>{{item.tempTotal | currency}}</td>
+                <td>{{item.tempPrice*item.ordered | currency}}</td>
               </tr>
             </table>
           </div>
@@ -137,15 +137,15 @@
           <table id="invoiceTotalTable">
             <tr>
               <th>Sub total</th>
-              <td>$10000</td>
+              <td>{{app.subTotal | currency}}</td>
             </tr>
             <tr>
               <th>GST</th>
-              <td>$100</td>
+              <td>{{app.gst | currency}}</td>
             </tr>
             <tr>
               <th>Total</th>
-              <td>$10100</td>
+              <td>{{app.grandTotal | currency}}</td>
             </tr>
           </table>
         </div>
