--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <div ng-show="app.access">
       <div class="no-print">
         <div class="white"></div>
-        <h1 id="title" class="col-12"><img class="no-print logo" src="images/logo.png"> Packing Slip Generator</h1>
+        <h1 id="title" class="col-12"><img class="no-print logo" src="images/logo.png"> <span ng-show="!app.invoice">Packing Slip Generator</span><span ng-show="app.invoice">Invoice Slip Generator</span></h1>
         <div class="greeting">
           <p>
             Welcome back, {{app.name}}! <br class="greetingBreakline"><button class="clean-gray-btn" ng-click="app.logout()">Logout</button><span ng-show="!app.selectedBranch.name==''"><button class="clean-gray-btn" ng-click="app.loadData()">Load last order</button></span>
             <br>
-            Current view: <button class="clean-gray-btn" ng-click="app.changeView()"><span ng-show="!app.invoice">Packing Slip</span><span ng-show="app.invoice">Invoice</span></button>
+            Change to: <button class="clean-gray-btn" ng-click="app.changeView()"><span ng-show="!app.invoice">Invoice Slip</span><span ng-show="app.invoice">Packing slip</span></button>
           </p>
         </div>
         <textarea id="notes" ng-model="app.notes" placeholder="Notes"></textarea>
