feat: User can now create invoice slips for customers not in database

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <strong>| </strong> Date: <input id="datePicker" type="date" onclick="this.select()" ng-model="app.date">
           <strong>| </strong> <input type="text" ng-model="app.searchBox" ng-keyup="app.search()" placeholder="Item search">
           <br>
-          <h2>Customer: {{app.selectedBranch.name}}</h2>
+          <h2><span ng-show="app.invoice">New: <input ng-model="app.invoiceNewCustomer" ng-click="app.resetCustomer()" type="checkbox"> | </span>Customer: <span ng-show="!app.invoiceNewCustomer">{{app.selectedBranch.name}}</span> <span ng-show="app.invoiceNewCustomer"><input ng-model="app.selectedBranch.name" placeholder="Name"> <input ng-model="app.selectedBranch.address" placeholder="Address"></span></h2>
 
           <hr>
         </div>
