--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
     <title>Packing Slip Generator</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="css/style.css" rel="stylesheet">
+
     <script src="https://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
     <script src="bower_components/jquery-2.1.4.min/jquery-2.1.4.min.js"></script>
+
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
     <script src="js/onLoad.js" async></script>
     <script src="js/buildTable.js" async></script>
-    <script src="js/angular.min.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body ng-controller="appCtrl as app" class="container">
     <div id="loading"></div>
     <!-- The user must first login before they can use the application -->
-    <div ng-show="!app.access" class="no-print">
+    <div ng-show="!access" class="no-print">
       <h1 id="title" class="col-12"><img class="no-print logo" src="images/logo.png"> Packing Slip Generator</h1>
 
       <div class="login-card">
@@ -30,13 +37,13 @@
     </div>
 
     <!-- If the user has logged in they can use the functions -->
-    <div ng-show="app.access">
+    <div ng-show="access">
       <div class="no-print">
         <div class="white"></div>
         <h1 id="title" class="col-12"><img class="no-print logo" src="images/logo.png"> <span ng-show="!app.invoice">Packing Slip Generator</span><span ng-show="app.invoice">Invoice Slip Generator</span></h1>
         <div class="greeting">
           <p>
-            Welcome back, {{app.name}}! <br class="greetingBreakline"><button class="clean-gray-btn" ng-click="app.logout()">Logout</button><span ng-show="!app.selectedBranch.name==''"><button class="clean-gray-btn" ng-click="app.loadData()">Load last order</button></span>
+            Welcome back, {{name}}! <br class="greetingBreakline"><button class="clean-gray-btn" ng-click="app.logout()">Logout</button><span ng-show="!app.selectedBranch.name==''"><button class="clean-gray-btn" ng-click="app.loadData()">Load last order</button></span>
             <br>
             Change to: <button class="clean-gray-btn" ng-click="app.changeView()"><span ng-show="!app.invoice">Invoice Slip</span><span ng-show="app.invoice">Packing slip</span></button>
           </p>
@@ -58,12 +65,12 @@
           <nav>
             <ul>
               <li class="center row" ng-show="!app.invoice">
-                <span ng-repeat="customerList in app.customers | limitTo: 5" ng-click="app.showList(customerList)" class="clean-gray-btn customerList">{{customerList.name}}</span>
+                <span ng-repeat="customerList in customers | limitTo: 5" ng-click="app.showList(customerList)" class="clean-gray-btn customerList">{{customerList.name}}</span>
               </li>
               <li class="center row" ng-show="app.invoice">
-                <span ng-click="app.showList(app.customers[5])" class="clean-gray-btn customerList">Invoice customers</span>
+                <span ng-click="app.showList(customers[5])" class="clean-gray-btn customerList">Invoice customers</span>
               </li>
-              <li ng-repeat="customerList in app.customers">
+              <li ng-repeat="customerList in customers">
                 <ul class="shopList" ng-show="customerList.show">
                   <li ng-repeat="branch in customerList.array" ng-click="app.listClick(branch)" class="clean-gray-btn clean-gray-btn-shop">{{branch.name}}</li>
                 </ul>
